--- a/oomph/index.adoc
+++ b/oomph/index.adoc
@@ -2,27 +2,29 @@
 :lang: en
 :favicon:
 
-== oomph/EclipseInstaller setups
+== oomph/EclipseInstaller setups links
 
 === Project - oomph/EclipseInstaller
 
 IMPORTANT: pre-requisite Eclipse oomph-installer
 requires oomph app and registerd protocal handler
 
-link:https://github.com/eclipse-oomph/oomph[github: eclipse-oomph/oomph]
+[cols=3*,options=header]
+|===
+| github
+| oomph launch - URI handler available
+| no EclipseInstaller available
 
-image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=eclipse-oomph/oomph&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link:"https://www.eclipse.org/setups/installer/?url=https://raw.githubusercontent.com/eclipse-oomph/oomph/master/setups/configurations/OomphConfiguration.setup&show=true",alt="Create Eclipse Dev Env for eclipse-oomph/oomph"]
+|link:https://github.com/bndtools/bnd/[bndtools/bnd,window=_blank]
+|image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=bnd/bndtools&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link="eclipse+installer:https://cdn.klib.io/oomph/setups-github/BndConfiguration.setup",alt:"Launch Eclipse Dev Env for bnd/bndtools",window=_blank]|image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=bnd/bndtools&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link=https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/BndConfiguration.setup&show=true,alt:"Create Eclipse Dev Env for bnd/bndtools",window=_blank]
 
-image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=eclipse-oomph/oomph&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link:"eclipse+installer:https://raw.githubusercontent.com/eclipse-oomph/oomph/master/setups/configurations/OomphConfiguration.setup",alt="Launch Eclipse Dev Env for eclipse-oomph/oomph"]
+|link:https://github.com/klibio/cdn/[klibi/cdn,window=_blank]
+|image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=klibio/cdn&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link=eclipse+installer:https://cdn.klib.io/oomph/setups-github/CdnConfiguration.setup,alt:Launch Eclipse Dev Env for klibio/cdn,window=_blank]
+|image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=klibio/cdn&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link=https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/CdnConfiguration.setup&show=true,alt:Create Eclipse Dev Env for klibio/cdn,window=_blank]
 
-link:https://github.com/bndtools/bnd/[bndtools/bnd]
+|link:https://github.com/eclipse-oomph/oomph[eclipse-oomph/oomph,window=_blank]
+|image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=eclipse-oomph/oomph&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link="eclipse+installer:https://raw.githubusercontent.com/eclipse-oomph/oomph/master/setups/configurations/OomphConfiguration.setup",alt="Launch Eclipse Dev Env for eclipse-oomph/oomph",window=_blank]
+|image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=eclipse-oomph/oomph&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link=https://www.eclipse.org/setups/installer/?url=https://raw.githubusercontent.com/eclipse-oomph/oomph/master/setups/configurations/OomphConfiguration.setup&show=true,window=_blank]
 
-image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=bnd/bndtools&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link:https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/BndConfiguration.setup&show=true,alt:"Create Eclipse Dev Env for bnd/bndtools"]
+|===
 
-image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=bnd/bndtools&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link:"eclipse+installer:https://cdn.klib.io/oomph/setups-github/BndConfiguration.setup",alt:"Launch Eclipse Dev Env for bnd/bndtools"]
-
-link:https://github.com/klibio/cdn/[klibi/cdn]
-
-image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=klibio/cdn&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link:https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/CdnConfiguration.setup&show=true,alt:Create Eclipse Dev Env for klibio/cdn]
-
-image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=klibio/cdn&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link:eclipse+installer:https://cdn.klib.io/oomph/setups-github/CdnConfiguration.setup,alt:Launch Eclipse Dev Env for klibio/cdn]
