--- a/oomph/index.adoc
+++ b/oomph/index.adoc
@@ -15,7 +15,7 @@ requires oomph app and registerd protocal handler
 | oomph launch - URI handler available
 | no EclipseInstaller available
 
-3+| bla
+3+| **empty workspaces**
 
 |empty bndtools workspace
 |image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=empty%20bnd%20wrkspc&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link="eclipse+installer:https://cdn.klib.io/oomph/setups-github/BndConfigurationEmpty.setup",alt:"Launch empty bnd workspace",window=_blank]|image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=empty%20bnd%20wrkspc&style=for-the-badge&logoColor=white&labelColor=darkred&color=gray[link=https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/BndConfigurationEmpty.setup&show=true,alt:"Create empty bnd wrkspc",window=_blank]
@@ -23,12 +23,18 @@ requires oomph app and registerd protocal handler
 |empty ecf workspace
 |image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=empty%20ecf%20wrkspc&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link="eclipse+installer:https://cdn.klib.io/oomph/setups-github/BndConfigurationECF.setup",alt:"Launch empty bnd workspace",window=_blank]|image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=empty%20ecf%20wrkspc&style=for-the-badge&logoColor=white&labelColor=darkred&color=gray[link=https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/BndConfigurationECF.setup&show=true,alt:"Create empty ecf wrkspc",window=_blank]
 
+3+| **bndtools**
+
 |link:https://github.com/bndtools/bnd/[bndtools/bnd,window=_blank]
 |image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=bnd/bndtools&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link="eclipse+installer:https://cdn.klib.io/oomph/setups-github/BndConfiguration.setup",alt:"Launch Eclipse Dev Env for bnd/bndtools",window=_blank]|image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=bnd/bndtools&style=for-the-badge&logoColor=white&labelColor=darkred&color=gray[link=https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/BndConfiguration.setup&show=true,alt:"Create Eclipse Dev Env for bnd/bndtools",window=_blank]
 
-|link:https://github.com/klibio/cdn/[klibi/cdn,window=_blank]
+3+| **klib.io**
+
+|link:https://github.com/klibio/cdn/[klibio/cdn,window=_blank]
 |image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=klibio/cdn&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link=eclipse+installer:https://cdn.klib.io/oomph/setups-github/CdnConfiguration.setup,alt:Launch Eclipse Dev Env for klibio/cdn,window=_blank]
 |image:https://img.shields.io/static/v1?logo=eclipseide&label=Create%20Dev%20Env&message=klibio/cdn&style=for-the-badge&logoColor=white&labelColor=darkred&color=gray[link=https://www.eclipse.org/setups/installer/?url=https://cdn.klib.io/oomph/setups-github/CdnConfiguration.setup&show=true,alt:Create Eclipse Dev Env for klibio/cdn,window=_blank]
+
+3+| **oomph / eclipse-installer**
 
 |link:https://github.com/eclipse-oomph/oomph[eclipse-oomph/oomph,window=_blank]
 |image:https://img.shields.io/static/v1?logo=eclipseide&label=Launch%20Dev%20Env&message=eclipse-oomph/oomph&style=for-the-badge&logoColor=white&labelColor=darkorange&color=gray[link="eclipse+installer:https://raw.githubusercontent.com/eclipse-oomph/oomph/master/setups/configurations/OomphConfiguration.setup",alt="Launch Eclipse Dev Env for eclipse-oomph/oomph",window=_blank]
