--- a/index.adoc
+++ b/index.adoc
@@ -6,13 +6,4 @@
 === oomph setups
 
 link:oomph/index.html[oomph/EclipseInstaller configurations]
-
-=== p2 repositories
-
-* link:org.bndtools.p2/6.4.1/[https://bndtools.org/bndtools.p2.repo/6.4.1/]
-* link:org.bndtools.p2/7.0.0/[https://bndtools.org/bndtools.p2.repo/7.1.0/]
-
-== Sizer
-
-* https://www.brianapps.net/sizer4/[Sizer 4.0 - official site, window=_blank]
-* link:sizer/sizer.html/[Sizer] / link:sizer/SizerExport.xml[sizer config file]
+link:bndtools setups[https://bndtools.org/bndtools.p2.repo/]
